--- a/VVVF-Yaml-Generator/MainWindow.xaml
+++ b/VVVF-Yaml-Generator/MainWindow.xaml
@@ -5,13 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VVVF_Data_Generator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" ResizeMode="NoResize">
-    <Grid>
+        Title="MainWindow" Height="450" Width="900" ResizeMode="NoResize">
+    <Grid Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="53*"/>
             <ColumnDefinition Width="147*"/>
         </Grid.ColumnDefinitions>
         <TabControl Margin="10,10,16,10">
+            <TabItem Header="File">
+                <Grid Background="#FFFFFFFF">
+                    <Button x:Name="save_file_button" Content="Save Yaml" Tag="Save" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="Arial Rounded MT Bold" FontSize="12" BorderBrush="#FF0012FF" Click="file_button_click"/>
+                    <Button x:Name="load_file_button" Content="Load Yaml" Tag="Load" HorizontalAlignment="Center" Margin="0,43,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="Arial Rounded MT Bold" FontSize="12" BorderBrush="#FF0012FF" Click="file_button_click"/>
+                </Grid>
+            </TabItem>
             <TabItem Header="Settings">
                 <Grid Background="#FFFFFFFF">
                     <StackPanel/>
