--- a/VVVF-Yaml-Generator/Pages/Settings/minimum_freq_setting.xaml
+++ b/VVVF-Yaml-Generator/Pages/Settings/minimum_freq_setting.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:VVVF_Data_Generator.Pages.Settings"
       mc:Ignorable="d" 
-      d:DesignHeight="434" d:DesignWidth="588"
+      d:DesignHeight="434" d:DesignWidth="661"
       Title="minimum_freq_setting">
 
     <Grid>
@@ -37,12 +37,12 @@
                 <Grid Grid.Column="1" Grid.Row="2" Background="White">
                     <TextBox x:Name="accelerate_min_freq_box" HorizontalAlignment="Center" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" Width="204" FontFamily="Arial Rounded MT Bold" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="0,0,20,0"
                              TextChanged="textbox_value_change" Tag="Accelerate"/>
-                    <Label Content="Hz" HorizontalAlignment="Left" Margin="221,76,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Hz" HorizontalAlignment="Right" Margin="221,76,25,0" VerticalAlignment="Top"/>
                 </Grid>
                 <Grid Grid.Column="2" Grid.Row="2" Background="White">
                     <TextBox x:Name="braking_min_freq_box" HorizontalAlignment="Center" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" Width="204" FontFamily="Arial Rounded MT Bold" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="0,0,20,0"
                              TextChanged="textbox_value_change" Tag="Brake"/>
-                    <Label Content="Hz" HorizontalAlignment="Left" Margin="221,76,0,0" VerticalAlignment="Top"/>
+                    <Label Content="Hz" HorizontalAlignment="Right" Margin="0,76,25,0" VerticalAlignment="Top"/>
                 </Grid>
                 <Border BorderBrush="LightGray" BorderThickness="1" Grid.Column="1" Grid.Row="2"/>
                 <Border BorderBrush="LightGray" BorderThickness="1" Grid.Column="2" Grid.Row="1"/>
