--- a/VVVF-Yaml-Generator/MainWindow.xaml
+++ b/VVVF-Yaml-Generator/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VVVF_Data_Generator"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="900" ResizeMode="NoResize">
+        Title="VVVF Yaml Generator" Height="450" Width="900" ResizeMode="NoResize">
     <Grid Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="53*"/>
@@ -28,7 +28,19 @@
             </TabItem>
             <TabItem Header="Accelerate">
                 <Grid Background="#FFFFFFFF">
-                    <StackPanel/>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="343*"/>
+                        <RowDefinition Height="43*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.RowSpan="2"/>
+                    <Grid Grid.RowSpan="2"/>
+                    <Button x:Name="accelerate_add" Content="+" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="28" FontFamily="Arial Rounded MT Bold" FontSize="12" BorderBrush="#FF0012FF" Click="accelerate_Click" Margin="15,0,0,0"/>
+                    <Button x:Name="accelerate_remove" Content="-" HorizontalAlignment="Left" VerticalAlignment="Center" Height="28" Width="28" FontFamily="Arial Rounded MT Bold" BorderBrush="#FF0012FF" Click="accelerate_Click" Grid.Row="1" Margin="60,0,0,0"/>
+                    <Button x:Name="accelerate_reset" Content="RESET" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,15,0" VerticalAlignment="Center" Height="28" Width="66" FontFamily="Arial Rounded MT Bold" BorderBrush="#FF0010FF" Click="accelerate_Click"/>
+                    <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="1"/>
+                    <ListView x:Name="accelerate_settings" SelectionMode="Single"/>
+
+
                 </Grid>
             </TabItem>
             <TabItem Header="Brake">
