--- a/VVVF-Yaml-Generator/Pages/Settings/mascon_off_setting.xaml
+++ b/VVVF-Yaml-Generator/Pages/Settings/mascon_off_setting.xaml
@@ -14,7 +14,172 @@
             <RowDefinition Height="167*"/>
             <RowDefinition Height="24*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="1"/>
+        <Grid Grid.Row="1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="16*"/>
+                    <RowDefinition Height="41*"/>
+                    <RowDefinition Height="246*"/>
+                    <RowDefinition Height="34*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40*"/>
+                    <ColumnDefinition Width="295*"/>
+                    <ColumnDefinition Width="295*"/>
+                    <ColumnDefinition Width="40*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="1" Grid.Row="1" Background="#FF86AEFF">
+                    <Border BorderBrush="#FF969696" BorderThickness="1">
+                        <Label Content="Accelerate" FontSize="16" FontFamily="Arial Rounded MT Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </Grid>
+                <Grid Grid.Column="2" Grid.Row="1" Background="#FF86AEFF">
+                    <Border BorderBrush="#FF969696" BorderThickness="1">
+                        <Label Content="Brake" FontSize="16" FontFamily="Arial Rounded MT Bold" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </Grid>
+                <Grid Grid.Column="1" Grid.Row="2" Background="White">
+                    <Border BorderBrush="#FF969696" BorderThickness="1">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="85*"/>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="85*"/>
+                            </Grid.RowDefinitions>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Background="#FFCDDEFF">
+                                <Grid>
+                                    <Label Content="Mascon ON" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Background="#FFCDDEFF">
+                                <Grid>
+                                    <Label Content="Mascon OFF" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="1" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Freq Goto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="1" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Freq Goto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="2">
+                                <Grid>
+                                    <TextBox x:Name="Accel_Mascon_On_Freq_Goto" TextWrapping="Wrap" Text="60.0" Margin="9,0,33,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Accel-On-Freq" VerticalAlignment="Center" Height="22"/>
+                                    <Label Content="Hz" HorizontalAlignment="Left" Margin="110,27,0,0" VerticalAlignment="Top"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="2">
+                                <Grid>
+                                    <TextBox x:Name="Accel_Mascon_Off_Freq_Goto" TextWrapping="Wrap" Text="60.0" Margin="9,0,33,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Accel-Off-Freq" Height="22" HorizontalAlignment="Stretch" VerticalAlignment="Center"/>
+                                    <Label Content="Hz" HorizontalAlignment="Left" Margin="110,27,0,0" VerticalAlignment="Top"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="3" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Mascon Off Div" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="3" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Mascon Off Div" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="4">
+                                <Grid>
+                                    <TextBox x:Name="Accel_Mascon_On_Off_Div" TextWrapping="Wrap" Text="20000" Margin="9,0,9,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Accel-On-Div" Height="22" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="4">
+                                <Grid>
+                                    <TextBox x:Name="Accel_Mascon_Off_Off_Div" TextWrapping="Wrap" Text="20000" Margin="9,0,9,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Accel-Off-Div" Height="22" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+
+                        </Grid>
+                    </Border>
+                </Grid>
+                <Grid Grid.Column="2" Grid.Row="2" Background="White">
+                    <Border BorderBrush="#FF969696" BorderThickness="1">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="1*"/>
+                                <ColumnDefinition Width="1*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="85*"/>
+                                <RowDefinition Height="35*"/>
+                                <RowDefinition Height="85*"/>
+                            </Grid.RowDefinitions>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Background="#FFCDDEFF">
+                                <Grid>
+                                    <Label Content="Mascon ON" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Background="#FFCDDEFF">
+                                <Grid>
+                                    <Label Content="Mascon OFF" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="1" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Freq Goto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="1" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Freq Goto" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="2">
+                                <Grid>
+                                    <TextBox x:Name="Brake_Mascon_On_Freq_Goto" TextWrapping="Wrap" Text="60.0" Margin="9,0,33,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Brake-On-Freq" Height="20" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+                                    <Label Content="Hz" HorizontalAlignment="Left" Margin="110,27,0,0" VerticalAlignment="Top"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="2">
+                                <Grid>
+                                    <TextBox x:Name="Brake_Mascon_Off_Freq_Goto" TextWrapping="Wrap" Text="60.0" Margin="9,0,33,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Brake-Off-Freq" Height="22" VerticalAlignment="Center"/>
+                                    <Label Content="Hz" HorizontalAlignment="Left" Margin="110,27,0,0" VerticalAlignment="Top"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="3" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Mascon Off Div" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="3" Background="#FFE6E8EC">
+                                <Grid>
+                                    <Label Content="Mascon Off Div" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0" FontSize="14" FontFamily="Arial Rounded MT Bold"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Row="4">
+                                <Grid>
+                                    <TextBox x:Name="Brake_Mascon_On_Off_Div" TextWrapping="Wrap" Text="20000" Margin="9,0,9,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Brake-On-Div" Height="22" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+                            <Border BorderBrush="#FF969696" BorderThickness="1" Grid.Column="1" Grid.Row="4">
+                                <Grid>
+                                    <TextBox x:Name="Brake_Mascon_Off_Off_Div" TextWrapping="Wrap" Text="20000" Margin="9,0,9,0" FontSize="16" FontFamily="Arial Rounded MT Bold" MaxLines="10" HorizontalContentAlignment="Center" TextChanged="TextBox_TextChanged" Tag="Brake-Off-Div" Height="22" VerticalAlignment="Center"/>
+                                </Grid>
+                            </Border>
+
+                        </Grid>
+                    </Border>
+                </Grid>
+            </Grid>
+        </Grid>
         <Grid Background="#FF86AEFF">
             <Label Content="MASCON OFF SETTING" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="Cascadia Mono" FontSize="22" RenderTransformOrigin="0.5,0.5">
                 <Label.RenderTransform>
