--- a/VVVF-Yaml-Generator/Pages/Settings/level_setting.xaml
+++ b/VVVF-Yaml-Generator/Pages/Settings/level_setting.xaml
@@ -21,7 +21,7 @@
 
 
         <Grid Background="#FF86AEFF">
-            <Label Content="VVVF LEVEL SETTING" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="Cascadia Mono" FontSize="22" RenderTransformOrigin="0.5,0.5">
+            <Label Content="VVVF LEVEL SETTING" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2" FontSize="24" RenderTransformOrigin="0.5,0.5" FontWeight="Bold">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
