--- a/VVVF-Yaml-Generator/Pages/Settings/mascon_off_setting.xaml
+++ b/VVVF-Yaml-Generator/Pages/Settings/mascon_off_setting.xaml
@@ -181,7 +181,7 @@
             </Grid>
         </Grid>
         <Grid Background="#FF86AEFF">
-            <Label Content="MASCON OFF SETTING" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="Cascadia Mono" FontSize="22" RenderTransformOrigin="0.5,0.5">
+            <Label Content="MASCON OFF SETTING" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2" FontSize="24" RenderTransformOrigin="0.5,0.5" FontWeight="Bold">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
