--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Control_Basic.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Control_Basic.xaml
@@ -18,41 +18,54 @@
                     <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="103*"/>
-                        <ColumnDefinition Width="573*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Background="#FF86AEFF"/>
-                    <Label Content="From" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
-                    <Grid Grid.Column="1">
+                    <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="452*"/>
-                            <ColumnDefinition Width="83*"/>
+                            <ColumnDefinition Width="103*"/>
+                            <ColumnDefinition Width="573*"/>
                         </Grid.ColumnDefinitions>
-                        <TextBox x:Name="from_text_box" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="56" VerticalAlignment="Stretch" FontFamily="M PLUS 2" FontWeight="Bold" FontSize="20" TextAlignment="Center" MaxLength="20" MaxLines="1" TextChanged="TextBox_TextChanged" Tag="From"/>
-                        <Label Grid.Column="1" Content="Hz" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,0,0" HorizontalContentAlignment="Center" FontFamily="M PLUS 2 Medium"/>
+                        <Grid Background="#FFA5A5A5">
+                            <Label Content="From" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="452*"/>
+                                <ColumnDefinition Width="83*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBox x:Name="from_text_box" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="56" VerticalAlignment="Stretch" FontFamily="M PLUS 2" FontWeight="Bold" FontSize="20" TextAlignment="Center" MaxLength="20" MaxLines="1" TextChanged="TextBox_TextChanged" Tag="From" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                            <Label Grid.Column="1" Content="Hz" HorizontalAlignment="Center" VerticalAlignment="Center" VerticalContentAlignment="Center" Padding="0,0,0,0" HorizontalContentAlignment="Center" FontFamily="M PLUS 2 Medium"/>
+                        </Grid>
                     </Grid>
                 </Grid>
 
                 <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="103*"/>
-                        <ColumnDefinition Width="573*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Background="#FF86AEFF"/>
-                    <Label Content="Pulse Mode" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
-                    <ComboBox x:Name="pulse_name_selector" FontFamily="M PLUS 2" FontWeight="Bold" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="pulse_name_selector_SelectionChanged" Grid.Column="1" Grid.ColumnSpan="1"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="103*"/>
+                            <ColumnDefinition Width="573*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Background="#FFA5A5A5">
+                            <Label Content="Pulse Mode" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <ComboBox x:Name="pulse_name_selector" FontFamily="M PLUS 2" FontWeight="Bold" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="pulse_name_selector_SelectionChanged" Grid.ColumnSpan="1" Margin="10,10,10,10"/>
+                        </Grid>
+                    </Grid>
                 </Grid>
 
                 <Grid Grid.Row="2">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="103*"/>
-                        <ColumnDefinition Width="573*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid Background="#FF86AEFF"/>
-                    <CheckBox x:Name="enable_on_free_check" Grid.Column="1" Content="Enable on FreeRun" HorizontalAlignment="Left" Margin="64,0,0,0" VerticalAlignment="Center" Checked="enable_checked" Tag="FreeRun"/>
-                    <CheckBox x:Name="enable_on_normal_check" Grid.Column="1" Content="Enable on Normal" HorizontalAlignment="Right" Margin="0,0,64,0" VerticalAlignment="Center" Checked="enable_checked" Tag="Normal"/>
-                    <Label Content="Enable" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="103*"/>
+                            <ColumnDefinition Width="573*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid Background="#FFA5A5A5">
+                            <Label Content="Enable" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                        </Grid>
+                        <Grid Grid.Column="1">
+                            <CheckBox x:Name="enable_on_normal_check" Content="Enable on Normal" HorizontalAlignment="Right" Margin="100,0,100,0" VerticalAlignment="Center" Checked="enable_checked" Tag="Normal" Unchecked="enable_checked"/>
+                            <CheckBox x:Name="enable_on_free_check" Content="Enable on FreeRun" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" Checked="enable_checked" Tag="FreeRun" Unchecked="enable_checked"/>
+                        </Grid>
+                    </Grid>
                 </Grid>
             </Grid>
         </StackPanel>
