--- a/VVVF-Yaml-Generator/MainWindow.xaml
+++ b/VVVF-Yaml-Generator/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VVVF_Data_Generator"
         mc:Ignorable="d"
-        Title="VVVF Yaml Generator" Height="450" Width="900" ResizeMode="NoResize">
+        Title="VVVF Yaml Generator" Height="450" Width="900">
     <Grid Margin="0,0,0,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="53*"/>
@@ -14,16 +14,16 @@
         <TabControl Margin="10,10,16,10">
             <TabItem Header="File">
                 <Grid Background="#FFFFFFFF">
-                    <Button x:Name="save_file_button" Content="Save Yaml" Tag="Save" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="file_button_click"/>
-                    <Button x:Name="load_file_button" Content="Load Yaml" Tag="Load" HorizontalAlignment="Center" Margin="0,43,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="file_button_click"/>
+                    <Button x:Name="save_file_button" Content="Save Yaml" Tag="Save" HorizontalAlignment="Stretch" Margin="0,10,0,0" VerticalAlignment="Top" Height="28" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="file_button_click"/>
+                    <Button x:Name="load_file_button" Content="Load Yaml" Tag="Load" HorizontalAlignment="Stretch" Margin="0,43,0,0" VerticalAlignment="Top" Height="28" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="file_button_click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Settings">
                 <Grid Background="#FFFFFFFF">
                     <StackPanel/>
-                    <Button x:Name="settings_level" Content="Level" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="setting_button_Click"/>
-                    <Button x:Name="settings_minimum" Content="Minimum Frequency" HorizontalAlignment="Center" Margin="0,43,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="setting_button_Click"/>
-                    <Button x:Name="settings_mascon" Content="Mascon Off" HorizontalAlignment="Center" Margin="0,76,0,0" VerticalAlignment="Top" Height="28" Width="161" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0010FF" Click="setting_button_Click"/>
+                    <Button x:Name="settings_level" Content="Level" HorizontalAlignment="Stretch" Margin="0,10,0,0" VerticalAlignment="Top" Height="28" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="setting_button_Click"/>
+                    <Button x:Name="settings_minimum" Content="Minimum Frequency" HorizontalAlignment="Stretch" Margin="0,43,0,0" VerticalAlignment="Top" Height="28" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0012FF" Click="setting_button_Click"/>
+                    <Button x:Name="settings_mascon" Content="Mascon Off" HorizontalAlignment="Stretch" Margin="0,76,0,0" VerticalAlignment="Top" Height="28" FontFamily="M PLUS 2 Medium" FontSize="16" BorderBrush="#FF0010FF" Click="setting_button_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Accelerate">
