--- a/VVVF-Yaml-Generator/Pages/Settings/minimum_freq_setting.xaml
+++ b/VVVF-Yaml-Generator/Pages/Settings/minimum_freq_setting.xaml
@@ -35,14 +35,14 @@
                     <Label Content="Braking" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontFamily="M PLUS 2 Medium"/>
                 </Grid>
                 <Grid Grid.Column="1" Grid.Row="2" Background="White">
-                    <TextBox x:Name="accelerate_min_freq_box" HorizontalAlignment="Center" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" Width="204" FontFamily="M PLUS 2 Medium" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="0,0,20,0"
+                    <TextBox x:Name="accelerate_min_freq_box" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="40,0,50,0"
                              TextChanged="textbox_value_change" Tag="Accelerate" FontWeight="Bold"/>
-                    <Label Content="Hz" HorizontalAlignment="Right" Margin="221,76,25,0" VerticalAlignment="Top"/>
+                    <Label Content="Hz" HorizontalAlignment="Right" Margin="0,0,20,0" VerticalAlignment="Center"/>
                 </Grid>
                 <Grid Grid.Column="2" Grid.Row="2" Background="White">
-                    <TextBox x:Name="braking_min_freq_box" HorizontalAlignment="Center" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" Width="204" FontFamily="M PLUS 2 Medium" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="0,0,20,0"
-                             TextChanged="textbox_value_change" Tag="Brake" FontWeight="Bold"/>
-                    <Label Content="Hz" HorizontalAlignment="Right" Margin="0,76,25,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="braking_min_freq_box" TextWrapping="Wrap" Text="2.00" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontSize="24" UndoLimit="100" TextAlignment="Center" MaxLength="10" Margin="40,0,50,0"
+                             TextChanged="textbox_value_change" Tag="Brake" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+                    <Label Content="Hz" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,20,0"/>
                 </Grid>
                 <Border BorderBrush="LightGray" BorderThickness="1" Grid.Column="1" Grid.Row="2"/>
                 <Border BorderBrush="LightGray" BorderThickness="1" Grid.Column="2" Grid.Row="1"/>
