--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="661">
+             d:DesignHeight="500" d:DesignWidth="661">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="350"/>
@@ -23,7 +24,23 @@
                         <ColumnDefinition Width="573*"/>
                     </Grid.ColumnDefinitions>
                     <Grid Background="#FFA5A5A5">
-                        <Label Content="Mode" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
+                        <Label Content="Random" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
+                    </Grid>
+                    <Grid Grid.Column="1" Background="White" HorizontalAlignment="Stretch">
+                        <TextBox x:Name="random_box" HorizontalAlignment="Stretch" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="random_box_TextChanged" Margin="10,0,10,0"/>
+
+                    </Grid>
+                </Grid>
+
+            </Grid>
+            <Grid Grid.Row="2">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="103*"/>
+                        <ColumnDefinition Width="573*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid Background="#FFA5A5A5">
+                        <Label Content="Param Type" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" Foreground="White" FontSize="14"/>
                     </Grid>
                     <Grid Grid.Column="1" Background="White" HorizontalAlignment="Stretch">
                         <ComboBox x:Name="carrier_freq_mode" FontSize="16" FontFamily="M PLUS 2" FontWeight="Bold"  Margin="10,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" SelectionChanged="carrier_freq_mode_SelectionChanged" />
@@ -32,7 +49,7 @@
                 </Grid>
 
             </Grid>
-            <Grid Grid.Row="2">
+            <Grid Grid.Row="3">
                 <Grid VerticalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="103*"/>
