--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async_Const.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async_Const.xaml
@@ -7,8 +7,22 @@
              mc:Ignorable="d" 
              d:DesignHeight="350" d:DesignWidth="560">
     <Grid>
-        <TextBox x:Name="const_box" HorizontalAlignment="Right" Margin="0,81,100,0" TextWrapping="Wrap" Text="1050" VerticalAlignment="Top" Width="223" Height="26" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" TextChanged="const_box_TextChanged"/>
-        <Label Content="Const Value[Hz]" HorizontalAlignment="Left" Margin="100,82,0,0" VerticalAlignment="Top" FontFamily="M PLUS 2 Medium"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="5*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Background="#FF86AEFF"/>
+            <Grid Grid.Column="1" Background="White"/>
+            <Label Content="Const Value[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" FontFamily="M PLUS 2 Medium"/>
+            <TextBox x:Name="const_box" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="const_box_TextChanged" Tag="start"/>
+        </Grid>
 
     </Grid>
 </UserControl>
