--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async_Moving.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Async/Control_Async_Moving.xaml
@@ -23,8 +23,8 @@
             </Grid.ColumnDefinitions>
             <Grid Background="#FF86AEFF"/>
             <Grid Grid.Column="1" Background="White"/>
-            <Label Content="Start[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White"/>
-            <TextBox x:Name="start" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16"/>
+            <Label Content="Start[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" FontFamily="M PLUS 2 Medium"/>
+            <TextBox x:Name="start" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="{Binding start}" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="text_changed" Tag="start"/>
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -33,8 +33,8 @@
             </Grid.ColumnDefinitions>
             <Grid Background="#FF86AEFF"/>
             <Grid Grid.Column="1" Background="White"/>
-            <Label Content="Start Carrier[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White"/>
-            <TextBox x:Name="start_carrier" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16"/>
+            <Label Content="Start Carrier[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" FontFamily="M PLUS 2 Medium"/>
+            <TextBox x:Name="start_carrier" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="{Binding start_value}" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="text_changed" Tag="start_hz"/>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
@@ -43,8 +43,8 @@
             </Grid.ColumnDefinitions>
             <Grid Background="#FF86AEFF"/>
             <Grid Grid.Column="1" Background="White"/>
-            <Label Content="End[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White"/>
-            <TextBox x:Name="end" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16"/>
+            <Label Content="End[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" FontFamily="M PLUS 2 Medium"/>
+            <TextBox x:Name="end" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="{Binding end}" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="text_changed" Tag="end"/>
         </Grid>
         <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
@@ -53,8 +53,8 @@
             </Grid.ColumnDefinitions>
             <Grid Background="#FF86AEFF"/>
             <Grid Grid.Column="1" Background="White"/>
-            <Label Content="End Carrier[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White"/>
-            <TextBox x:Name="end_carrier" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="10" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16"/>
+            <Label Content="End Carrier[Hz]" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16" FontWeight="Bold" Foreground="White" FontFamily="M PLUS 2 Medium"/>
+            <TextBox x:Name="end_carrier" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" Text="{Binding end_value}" VerticalAlignment="Center" Width="380" Height="31" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontFamily="M PLUS 2 Medium" FontWeight="Bold" FontSize="16" TextChanged="text_changed" Tag="end_hz"/>
         </Grid>
 
     </Grid>
