--- a/VVVF-Yaml-Generator/Pages/Control_Settings/Page_Control_Common_Async.xaml
+++ b/VVVF-Yaml-Generator/Pages/Control_Settings/Page_Control_Common_Async.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Control_Common"
+﻿<Page x:Class="VVVF_Yaml_Generator.Pages.Control_Settings.Page_Control_Common_Async"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,21 +6,19 @@
       xmlns:local="clr-namespace:VVVF_Yaml_Generator.Pages.Control_Settings"
       mc:Ignorable="d" 
       d:DesignHeight="2200" d:DesignWidth="678"
-      Title="Control_Common">
+      Title="Page_Control_Common_Async">
 
-    <Grid Background="White">
+    <Grid>
         <ScrollViewer x:Name="scrollViewer">
             <StackPanel>
-                <Frame Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden"/>
-                <Frame Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden"/>
-                <Frame Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden"/>
+                <Frame x:Name="Control_Basic" Height="200" NavigationUIVisibility="Hidden"/>
+                <Frame x:Name="Control_When_FreeRun" Height="150" NavigationUIVisibility="Hidden"/>
+                <Frame x:Name="Control_Amplitude_Default" Height="300" NavigationUIVisibility="Hidden"/>
                 <Frame x:Name="Control_Amplitude_FreeRun_On" Height="300" NavigationUIVisibility="Hidden"/>
                 <Frame x:Name="Control_Amplitude_FreeRun_Off" Height="300" NavigationUIVisibility="Hidden"/>
                 <Frame x:Name="Control_Async" Height="500" NavigationUIVisibility="Hidden"/>
             </StackPanel>
         </ScrollViewer>
-
-
 
     </Grid>
 </Page>
